# ETH-ROS-Course

./: README.md  dummy_test_config_name.txt  husky_highlevel_controller_ex_4
husky_highlevel_controller_ex_3/: CMakeLists.txt  package.xml
husky_highlevel_controller_ex_3/config/: config.yaml
husky_highlevel_controller_ex_3/include/husky_highlevel_controller_ex_3/: HuskyHighlevelControllerEx3.hpp  Scan2.hpp
husky_highlevel_controller_ex_3/launch/: empty_world_trial.launch  singlePillar.launch
husky_highlevel_controller_ex_3/src/: HuskyHighlevelControllerEx3.cpp  Scan2.cpp  husky_highlevel_controller_ex_3_node.cpp
husky_highlevel_controller_ex_4/: CMakeLists.txt  package.xml
husky_highlevel_controller_ex_4/config/: config.yaml
husky_highlevel_controller_ex_4/include/husky_highlevel_controller_ex_4/: HuskyHighlevelControllerEx4.hpp  Scan2.hpp
husky_highlevel_controller_ex_4/launch/: husky_robocup14_spl_field.launch  singlePillar.launch
husky_highlevel_controller_ex_4/src/: HuskyHighlevelControllerEx4.cpp  Scan2.cpp  husky_highlevel_controller_ex_4_node.cpp
husky_highlevel_controller_ex_5/: CMakeLists.txt  package.xml
husky_highlevel_controller_ex_5/launch/: empty_world_trial.launch  husky_robocup14_spl_field.launch  singlePillar.launch
husky_highlevel_controller_ex_5/src/: HuskyHighlevelControllerEx5.cpp  Scan2.cpp  husky_highlevel_controller_ex_5_node.cpp
husky_highlevel_controller_new/: CMakeLists.txt  package.xml
husky_highlevel_controller_new/config/: config.yaml
husky_highlevel_controller_new/include/husky_highlevel_controller_new/: HuskyHighlevelControllerNew.hpp  Scan2.hpp
husky_highlevel_controller_new/launch/: empty_world_trial.launch  husky_robocup14_spl_field.launch
husky_highlevel_controller_new/src/: HuskyHighlevelControllerNew.cpp  Scan2.cpp  husky_highlevel_controller_new_node.cpp
(+2 files in other folders)
